--- a/package.json
+++ b/package.json
@@ -17,9 +17,7 @@
   },
   "homepage": "https://github.com/ForceDotComLabs/react.force.datacontainer#readme",
   "peerDependencies": {
-    "react-native": ">=0.20.0",
-    "react.force": "https://github.com/ForceDotComLabs/react.force.git",
-    "react.force.data": "https://github.com/ForceDotComLabs/react.force.data.git"
+    "react-native": ">=0.20.0"
   },
   "dependencies": {
     "lodash.findindex": "^4.4.0",
@@ -28,6 +26,7 @@
     "lodash.remove": "^4.5.0",
     "lodash.trim": "^4.4.0",
     "lodash.union": "^4.4.0",
-    "shallowequal": "^0.2.2"
+    "shallowequal": "^0.2.2",
+    "react.force.data": "https://github.com/ivanbogdanov/react.force.data.git"
   }
 }
